plus and minus functions

--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
 
 	<main>
     <div class="calculator">
-     <div class="results"></div> 
+     <p class="results"></p> 
      <div class="container">
-        <div class="item functions"><h3>%</h3></div>
-        <div class="item functions"><h3>CE</h3></div>
-        <div class="item functions"><h3>C</h3></div>
-        <div class="item functions"><h3>x</h3></div>
-        <div class="item functions"><h3>1x</h3></div>
-        <div class="item functions"><h3>x2</h3></div>
-        <div class="item functions"><h3>v</h3></div>
-        <div class="item functions"><h3>/</h3></div>
-        <div class="item strong"><h3>7</h3></div>
-        <div class="item strong"><h3>8</h3></div>
-        <div class="item strong"><h3>9</h3></div>
-        <div class="item functions"><h3>X</h3></div>
-        <div class="item strong"><h3>4</h3></div>
-        <div class="item strong"><h3>5</h3></div>
-        <div class="item strong"><h3>6</h3></div>
-        <div class="item functions"><h3>-</h3></div>
-        <div class="item strong"><h3>1</h3></div>
-        <div class="item strong"><h3>2</h3></div>
-        <div class="item strong"><h3>3</h3></div>
-        <div class="item functions"><h3>+</h3></div>
-        <div class="item"><h3>+/-</h3></div>
-        <div class="item strong"><h3>0</h3></div>
-        <div class="item"><h3>.</h3></div>
-        <div class="item functions diferent">=</div>
+        <button class="item functions">%</button>
+        <button class="item functions">CE</button>
+        <button class="item functions">C</button>
+        <button class="item functions">x</button>
+        <button class="item functions">1x</button>
+        <button class="item functions">x2</button>
+        <button class="item functions">v</button>
+        <button class="item functions">/</button>
+        <button class="item number strong">7</button>
+        <button class="item number strong">8</button>
+        <button class="item number strong">9</button>
+        <button class="item functions">X</button>
+        <button class="item number strong">4</button>
+        <button class="item number strong">5</button>
+        <button class="item number strong">6</button>
+        <button class="item functions" data-value="minus">-</button>
+        <button class="item number strong">1</button>
+        <button class="item number strong">2</button>
+        <button class="item number strong">3</button>
+        <button class="item functions" data-value="plus">+</button>
+        <button class="item">+/-</button>
+        <button class="item number strong">0</button>
+        <button class="item">.</button>
+        <button class="item equal">=</button>
       </div>
     </div>
 
